# Alpaca

./: .dockerignore  .gitignore  APIAnalysis.cpp  Analyser.cpp  CMakeLists.txt  CodeMatcher.cpp  ConsoleOutputHandler.cpp  Dockerfile  FunctionAnalyser.cpp  HelperFunctions.cpp  JSONOutputHandler.cpp  LICENSE  ObjectAnalyser.cpp  ReadME.md  VariableAnalyser.cpp
TestFiles/: Test.cpp  TestNew.cpp
TestFiles/OldFiles/: Test.cpp  Test2.cpp
TestFiles/OldFiles/headers/: Header1.h  Header2.h  Test.h
TestFiles/OldFiles/sources/: something.cpp
TestFiles/newFiles/: Test.cpp  Test2.cpp  TestNew.cpp
TestFiles/newFiles/headers/: Header1.h  Header2.h  Test.h
TestFiles/newFiles/sources/: newClasses.cpp
header/: Analyser.h  CodeMatcher.h  FunctionAnalyser.h  HelperFunctions.h  JSONFile.h  ObjectAnalyser.h  OutputHandler.h  VariableAnalyser.h
header/JSONDefinitions/: InsertAction.h  JSONFunction.h  RemoveAction.h  ReplaceAction.h
include/: json.hpp
